# high-performance-trading-platform

./: .gitignore  AGENTS.md  AUTHORS.md  GOOGLE_OAUTH_SETUP.md  PRODUCTION_SETUP.md  README-Infrastructure.md  README-LocalDev.md  README-Operations.md  README.md  deploy.sh  docker-compose.db.yml  docker-compose.dev.yml  docker-compose.yml  fix_monte_carlo_tests.py  localstack-config.yml  pyproject.toml  test_monte_carlo_websocket_enhanced.py
.github/workflows/: deploy.yml
backend/api/: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  PERFORMANCE.md  README.md  alembic.ini  debug_test.py  docker-compose.yml  pyproject.toml  ruff_backend.txt  ruff_output.txt  test_cognito_create.py
backend/api/scripts/: benchmark_monte_carlo_parallelism.py  bootstrap.py  rag_cli.py
backend/api/src/api/: __init__.py  main.py
backend/api/src/api/routers/: auth.py  backtest.py  google_auth.py  history.py
backend/api/src/api/routes/: __init__.py  _backtest_route_utils.py  auth.py  backtest.py  google_auth.py  history.py  monte_carlo.py  performance.py
backend/api/src/config/: __init__.py  queue_config.py
backend/api/src/core/: auth_dependencies.py  background_task_logging.py  cloudwatch_logging.py  cognito.py  config.py  logging.py  security.py  simple_auth.py
backend/api/src/domain/: backtest.py  interfaces.py  queue.py
backend/api/src/domain/schemas/: auth.py  backtest.py  history.py
backend/api/src/infrastructure/: cache.py  db.py  db_indexes.py  models.py  redis_pubsub.py
backend/api/src/infrastructure/migrations/: 0003_add_job_timing_fields.py  env.py
backend/api/src/infrastructure/migrations/versions/: 0001_initial.py  0002_add_jobs_table.py  0003_add_job_timing_fields.py  0004_add_backtest_history_table.py  0005_add_cognito_fields_to_users.py  ff86974433c9_add_auth_method_to_user_model.py
backend/api/src/infrastructure/monitoring/: __init__.py  metrics.py
backend/api/src/infrastructure/queue/: __init__.py  sqs_adapter.py
backend/api/src/infrastructure/repositories/: backtest_history_repository.py  db_utils.py  jobs.py  user_repository.py  users.py
backend/api/src/infrastructure/security/: __init__.py  credential_manager.py  iam_policies.py
backend/api/src/infrastructure/storage/: __init__.py  s3_adapter.py
backend/api/src/services/: backtest_service.py  cognito_google_integration.py  google_oauth.py  job_manager.py  mc_backtest_service.py  password_validation_service.py
backend/api/src/services/rag/: __init__.py  indexer.py  retriever.py
backend/api/src/strategies/: backtest_result_builder.py  base.py  data_processor.py  database_manager.py  metrics.py  moving_average.py  rsi_reversion.py
backend/api/src/utils/: date_validation.py
backend/api/src/workers/: __init__.py  main.py  monte_carlo_worker.py  simple_worker.py
backend/api/tests/: conftest.py  test_api_backtest.py  test_api_backtest_multi_csv.py  test_api_backtest_strategy_param.py  test_backtest_service.py  test_backtest_service_property.py  test_backtest_service_validation.py  test_cognito_auth.py  test_csv_parsing_financial.py  test_google_oauth_integration.py  test_history_endpoints.py  test_load_performance.py  test_metrics_financial.py  test_monte_carlo_async_db_fallback.py  test_monte_carlo_async_websocket.py  test_monte_carlo_backtest.py  test_monte_carlo_generators.py  test_monte_carlo_integration.py  test_monte_carlo_service_correctness.py  test_monte_carlo_sync.py  test_monte_carlo_sync_backup.py  test_moving_average_strategy_correctness.py  test_performance_integration.py  test_performance_simple.py  test_queue_system_simple.py  test_rag_service.py  test_rsi_strategy_correctness.py  test_service_run_sma_crossover.py  test_websocket_integration.py
backend/api/tests/stress/: README.md  concurrent_job_stress_test.py  websocket_stress_test.py
docs/: architecture.md  context.md  corpus_manifest.md  decisions.md  glossary.md  infrastructure.md  metrics.md  routes.md  testing.md  workers.md
scripts/: dev-setup.sh  monte_carlo_ws_demo.sh  stop-dev.sh
terraform/: .terraform.tfstate.lock.info  alb.tf  cloudfront.tf  cloudwatch.tf  cognito.tf  data.tf  ecr.tf  ecs.tf  efs.tf  iam.tf  main.tf  outputs.tf  rds.tf  route53.tf  s3.tf  security_groups.tf  sqs.tf  terraform.tfstate  terraform.tfstate.1760191310.backup  terraform.tfstate.1761335392.backup  terraform.tfstate.backup  terraform.tfvars.example  tfout  tfplan  tfplan-cloudfront.out  tfplan.out  variables.tf  vpc.tf  worker.tf
trading-platform/: docker-compose.yml
trading-platform/web/: .gitignore  (+4 more)
web/: .env.example  Dockerfile  README-Infrastructure.md  biome.json  eslint.config.js  index.html  nginx.conf  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
(+130 files in other folders)
