[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["quentinpiot <qkpiot@gmail.com>"]
packages = [{ include = "api", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.13"
fastapi = ">=0.118.0,<0.119.0"
uvicorn = ">=0.37.0,<0.38.0"
pydantic = ">=2.6.0,<3.0.0"
python-dotenv = ">=1.0.0,<2.0.0"
sqlalchemy = ">=2.0.0,<3.0.0"
psycopg = { version = ">=3.1.0,<4.0.0", extras = ["binary"] }
pandas = ">=2.2.0,<3.0.0"
numpy = ">=1.26.0,<3.0.0"
python-jose = { version = ">=3.3.0,<4.0.0", extras = ["cryptography"] }
passlib = { version = ">=1.7.4,<2.0.0", extras = ["bcrypt"] }
python-multipart = ">=0.0.9,<0.0.10"
email-validator = ">=2.0.0,<3.0.0"
httpx = ">=0.28.1,<0.29.0"
pydantic-settings = ">=2.4.0,<3.0.0"
alembic = ">=1.13.2,<2.0.0"
asyncpg = ">=0.29.0,<1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0,<9.0"
hypothesis = ">=6.92,<7.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
