[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["quentinpiot <qkpiot@gmail.com>"]
packages = [{ include = "api", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.12"
fastapi = ">=0.118.0,<0.119.0"
uvicorn = { version = ">=0.37.0,<0.38.0", extras = ["standard"] }
websockets = ">=15.0.0,<16.0.0"
pydantic = ">=2.6.0,<3.0.0"
python-dotenv = ">=1.0.0,<2.0.0"
sqlalchemy = ">=2.0.0,<3.0.0"
psycopg = { version = ">=3.1.0,<4.0.0", extras = ["binary"] }
pandas = ">=2.2.0,<3.0.0"
numpy = ">=1.26.0,<3.0.0"
python-jose = {extras = ["cryptography"], version = "^3.5.0"}
passlib = { version = ">=1.7.4,<2.0.0", extras = ["bcrypt"] }
python-multipart = ">=0.0.9,<0.0.10"
email-validator = ">=2.0.0,<3.0.0"
httpx = ">=0.28.1,<0.29.0"
pydantic-settings = ">=2.4.0,<3.0.0"
alembic = ">=1.13.2,<2.0.0"
asyncpg = ">=0.29.0,<1.0.0"
watchtower = ">=3.0.0,<4.0.0"
psutil = ">=5.9.0,<6.0.0"
yfinance = "^0.2.66"
boto3 = "^1.40.55"
google-auth = "^2.41.1"
google-auth-oauthlib = "^1.2.2"
google-auth-httplib2 = "^0.2.0"
bcrypt = "4.2.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0,<9.0"
hypothesis = ">=6.92,<7.0"
pytest-asyncio = ">=0.21.0,<1.0.0"
moto = ">=4.2.0,<5.0.0"
httpx = ">=0.28.1,<0.29.0"
websockets = "^15.0.1"
aiohttp = "^3.13.1"
ruff = "^0.14.1"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
extend-select = ["B", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"src/api/routers/*.py" = ["B008"]
"src/api/routes/*.py" = ["B008"]
"src/core/*.py" = ["B008"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
