[project]
name = "api"
version = "0.1.0"
description = "High-performance trading backtest API"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.118.0",
  "uvicorn[standard]>=0.37.0",
  "websockets>=15.0.0",
  "pydantic>=2.6.0",
  "pydantic-settings>=2.4.0",
  "python-dotenv>=1.0.0",
  "sqlalchemy>=2.0.0",
  "greenlet>=3.3.2",
  "psycopg[binary]>=3.1.0",
  "asyncpg>=0.29.0",
  "alembic>=1.13.2",
  "pandas>=2.2.0",
  "numpy>=1.26.0",
  "python-jose[cryptography]>=3.5.0",
  "passlib[bcrypt]>=1.7.4",
  "bcrypt==4.2.0",
  "python-multipart>=0.0.9",
  "email-validator>=2.0.0",
  "httpx>=0.28.1",
  "watchtower>=3.0.0",
  "psutil>=5.9.0",
  "yfinance>=0.2.66",
  "boto3>=1.40.0",
  "google-auth>=2.41.0",
  "google-auth-oauthlib>=1.2.0",
  "google-auth-httplib2>=0.2.0",
]

[dependency-groups]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.21.0",
  "pytest-cov>=7.0.0",
  "hypothesis>=6.92",
  "moto>=4.2.0",
  "httpx>=0.28.1",
  "websockets>=15.0.1",
  "aiohttp>=3.13.1",
  "ruff>=0.14.0",
  "basedpyright>=1.37.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 88
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"src/api/routes/*.py" = ["B008"]
"src/core/*.py" = ["B008"]

[tool.basedpyright]
pythonVersion = "3.12"
typeCheckingMode = "standard"
include = ["src", "tests"]
exclude = [
  "src/core/cloudwatch_logging.py",
  "src/core/background_task_logging.py",
  "src/infrastructure/security",
  "src/infrastructure/storage",
  "src/services/cognito_google_integration.py",
  "src/services/google_oauth.py",
  "src/workers/main.py",
]
venvPath = "."
venv = ".venv"
extraPaths = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "strict"
